fix: plugin detail page link overflow

--- a/src/client/app/components/plugin/plugin.component.scss
+++ b/src/client/app/components/plugin/plugin.component.scss
@@ -83,6 +83,8 @@ span {
     margin-left: -20px;
     padding-left: 20px;
     color: #006968;
+    overflow: hidden;
+    
     p {
         font-size: 18px;
         margin-top: -7px;
